fix: content overflow

--- a/src/components/ui/products/product-item/product-item.module.scss
+++ b/src/components/ui/products/product-item/product-item.module.scss
@@ -45,4 +45,5 @@
 	font-size: 18px;
 	text-align: right;
 	overflow: hidden;
+	white-space: nowrap;
 }
